build/log/idf_py_stdout_output_31360
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\ESP32_Projects\esp32-atgs\build\bootloader\esp-idf\esptool_py && c:\esp\tools\Espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/ESP32_Projects/esp32-atgs/build/bootloader/bootloader.bin"
Bootloader binary size 0x6760 bytes. 0x8a0 bytes (8%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/connect.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/connect.c.obj 
ccache C:\esp\tools\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DUNITY_INCLUDE_CONFIG_H -ID:/ESP32_Projects/esp32-atgs/build/config -ID:/ESP32_Projects/esp32-atgs/main -ID:/ESP32_Projects/esp32-atgs/components/wifi -IC:/esp/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32/. -IC:/esp/esp-idf/components/soc/esp32/include -IC:/esp/esp-idf/components/hal/esp32/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/include/esp32 -IC:/esp/esp-idf/components/esp_rom/esp32 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/esp32/include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/esp32/include -IC:/esp/esp-idf/components/lwip/port/esp32/include/arch -IC:/esp/esp-idf/components/mdns/include -IC:/esp/esp-idf/components/console -IC:/esp/esp-idf/components/vfs/include -IC:/esp/esp-idf/components/esp_netif/include -IC:/esp/esp-idf/components/esp_event/include -IC:/esp/esp-idf/components/esp_ringbuf/include -IC:/esp/esp-idf/components/efuse/include -IC:/esp/esp-idf/components/efuse/esp32/include -IC:/esp/esp-idf/components/driver/include -IC:/esp/esp-idf/components/driver/deprecated -IC:/esp/esp-idf/components/driver/esp32/include -IC:/esp/esp-idf/components/esp_pm/include -IC:/esp/esp-idf/components/mbedtls/port/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/include -IC:/esp/esp-idf/components/mbedtls/mbedtls/library -IC:/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/esp/esp-idf/components/esp_app_format/include -IC:/esp/esp-idf/components/bootloader_support/include -IC:/esp/esp-idf/components/bootloader_support/bootloader_flash/include -IC:/esp/esp-idf/components/esp_partition/include -IC:/esp/esp-idf/components/app_update/include -IC:/esp/esp-idf/components/spi_flash/include -IC:/esp/esp-idf/components/pthread/include -IC:/esp/esp-idf/components/esp_timer/include -IC:/esp/esp-idf/components/app_trace/include -IC:/esp/esp-idf/components/nvs_flash/include -IC:/esp/esp-idf/components/esp_phy/include -IC:/esp/esp-idf/components/esp_phy/esp32/include -IC:/esp/esp-idf/components/wpa_supplicant/include -IC:/esp/esp-idf/components/wpa_supplicant/port/include -IC:/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -IC:/esp/esp-idf/components/esp_wifi/include -IC:/esp/esp-idf/components/unity/include -IC:/esp/esp-idf/components/unity/unity/src -IC:/esp/esp-idf/components/cmock/CMock/src -IC:/esp/esp-idf/components/http_parser -IC:/esp/esp-idf/components/esp-tls -IC:/esp/esp-idf/components/esp-tls/esp-tls-crypto -IC:/esp/esp-idf/components/esp32-camera/driver/include -IC:/esp/esp-idf/components/esp32-camera/conversions/include -IC:/esp/esp-idf/components/esp_adc/include -IC:/esp/esp-idf/components/esp_adc/interface -IC:/esp/esp-idf/components/esp_adc/esp32/include -IC:/esp/esp-idf/components/esp_adc/deprecated/include -IC:/esp/esp-idf/components/esp_eth/include -IC:/esp/esp-idf/components/esp_gdbstub/include -IC:/esp/esp-idf/components/esp_gdbstub/xtensa -IC:/esp/esp-idf/components/esp_gdbstub/esp32 -IC:/esp/esp-idf/components/esp_hid/include -IC:/esp/esp-idf/components/tcp_transport/include -IC:/esp/esp-idf/components/esp_http_client/include -IC:/esp/esp-idf/components/esp_http_server/include -IC:/esp/esp-idf/components/esp_https_ota/include -IC:/esp/esp-idf/components/esp_https_server/include -IC:/esp/esp-idf/components/esp_lcd/include -IC:/esp/esp-idf/components/esp_lcd/interface -IC:/esp/esp-idf/components/protobuf-c/protobuf-c -IC:/esp/esp-idf/components/protocomm/include/common -IC:/esp/esp-idf/components/protocomm/include/security -IC:/esp/esp-idf/components/protocomm/include/transports -IC:/esp/esp-idf/components/esp_local_ctrl/include -IC:/esp/esp-idf/components/esp_psram/include -IC:/esp/esp-idf/components/espcoredump/include -IC:/esp/esp-idf/components/espcoredump/include/port/xtensa -IC:/esp/esp-idf/components/wear_levelling/include -IC:/esp/esp-idf/components/sdmmc/include -IC:/esp/esp-idf/components/fatfs/diskio -IC:/esp/esp-idf/components/fatfs/vfs -IC:/esp/esp-idf/components/fatfs/src -IC:/esp/esp-idf/components/idf_test/include -IC:/esp/esp-idf/components/idf_test/include/esp32 -IC:/esp/esp-idf/components/ieee802154/include -IC:/esp/esp-idf/components/json/cJSON -IC:/esp/esp-idf/components/mqtt/esp-mqtt/include -IC:/esp/esp-idf/components/perfmon/include -IC:/esp/esp-idf/components/spiffs/include -IC:/esp/esp-idf/components/ulp/ulp_common/include -IC:/esp/esp-idf/components/ulp/ulp_common/include/esp32 -IC:/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/ESP32_Projects/esp32-atgs=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"-128-NOTFOUND\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/connect.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\connect.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/connect.c.obj -c D:/ESP32_Projects/esp32-atgs/main/connect.c
D:/ESP32_Projects/esp32-atgs/main/connect.c: In function 'event_handler':
D:/ESP32_Projects/esp32-atgs/main/connect.c:122:21: error: implicit declaration of function 'wifi_disconnect'; did you mean 'esp_wifi_disconnect'? [-Werror=implicit-function-declaration]
  122 |                     wifi_disconnect();
      |                     ^~~~~~~~~~~~~~~
      |                     esp_wifi_disconnect
D:/ESP32_Projects/esp32-atgs/main/connect.c: At top level:
D:/ESP32_Projects/esp32-atgs/main/connect.c:251:6: warning: conflicting types for 'wifi_disconnect'; have 'void(void)'
  251 | void wifi_disconnect( void ){
      |      ^~~~~~~~~~~~~~~
D:/ESP32_Projects/esp32-atgs/main/connect.c:122:21: note: previous implicit declaration of 'wifi_disconnect' with type 'void(void)'
  122 |                     wifi_disconnect();
      |                     ^~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
